gotenberg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  namespace: paperless  # Definiert den spezifischen Namespace für das Deployment
  labels:
    app: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      labels:
        app: gotenberg
    spec:
      containers:
      - name: gotenberg
        image: docker.io/gotenberg/gotenberg:8.7
        command: ["gotenberg"]
        args: ["--chromium-disable-javascript=true", "--chromium-allow-list=file:///tmp/.*"]
      restartPolicy: Always  # In Kubernetes, "UnlessStopped" übersetzt zu "Always"
