tika.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless  # Spezifizieren des Namespace
  labels:
    app: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
      - name: tika
        image: docker.io/apache/tika:latest
        # Keine speziellen Befehle oder Argumente notwendig, standardmäßig
      restartPolicy: Always  # Da "UnlessStopped" in Kubernetes als "Always" behandelt wird
