services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: paperless
spec:
  selector:
    app: paperless-backend
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: paperless
spec:
  selector:
    app: paperless-backend
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: webserver
  namespace: paperless
spec:
  selector:
    app: paperless-backend
    namespace: paperless
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
