tika.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tika
  namespace: paperless  # Spezifizieren des Namespace
  labels:
    app: tika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tika
  template:
    metadata:
      labels:
        app: tika
    spec:
      containers:
      - name: tika
        image: docker.io/apache/tika:latest
        # Keine speziellen Befehle oder Argumente notwendig, standardmäßig
        ports:
        - containerPort: 9998
      restartPolicy: Always  # Da "UnlessStopped" in Kubernetes als "Always" behandelt wird
---
apiVersion: v1
kind: Service
metadata:
  name: tika
  namespace: paperless
spec:
  selector:
    app: tika
  ports:
    - protocol: TCP
      port: 9998
      targetPort: 9998
