ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ppl-mathops-ingress
  namespace: paperless
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - ppl.mathops.info
    secretName: ppl-mathops-tls
  rules:
  - host: ppl.mathops.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port: 
              number: 8000
